# YOLOv8-TensorRT

csrc/detect/normal/: CMakeLists.txt
csrc/detect/normal_modify/: CMakeLists.txt  CMakeLists_2.txt  main.cpp
csrc/detect/normal_modify/include/: affine.cu  common.hpp  utils.hpp  yolov8.cpp  yolov8.hpp  yolov8_det.cpp  yolov8_det.hpp
